WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124794
[WK2] Fix the build of the NetworkProcess on iOS
https://bugs.webkit.org/show_bug.cgi?id=124794
Summary
[WK2] Fix the build of the NetworkProcess on iOS
Benjamin Poulain
Reported
2013-11-22 15:19:05 PST
[WK2] Fix the build of the NetworkProcess on iOS
Attachments
Patch
(3.36 KB, patch)
2013-11-22 15:19 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2013-11-22 15:19:30 PST
Created
attachment 217718
[details]
Patch
Alexey Proskuryakov
Comment 2
2013-11-22 15:37:59 PST
Comment on
attachment 217718
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217718&action=review
> Source/WebKit2/NetworkProcess/AsynchronousNetworkLoaderClient.cpp:71 > -#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090 > +#if PLATFORM(IOS) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090)
I wonder if we should be using a USE style macro here, not a PLATFORM one.
Benjamin Poulain
Comment 3
2013-11-22 15:45:17 PST
Comment on
attachment 217718
[details]
Patch Clearing flags on attachment: 217718 Committed
r159718
: <
http://trac.webkit.org/changeset/159718
>
Benjamin Poulain
Comment 4
2013-11-22 15:45:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug