[WK2] Fix the build of the NetworkProcess on iOS https://bugs.webkit.org/show_bug.cgi?id=124794

Patch by Benjamin Poulain <bpoulain@apple.com> on 2013-11-22
Reviewed by Alexey Proskuryakov.

* NetworkProcess/AsynchronousNetworkLoaderClient.cpp:
(WebKit::AsynchronousNetworkLoaderClient::didReceiveBuffer):
* NetworkProcess/NetworkResourceLoader.h:
* NetworkProcess/SynchronousNetworkLoaderClient.cpp:
(WebKit::SynchronousNetworkLoaderClient::willSendRequest):


Canonical link: https://commits.webkit.org/142969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159718 268f45cc-cd09-0410-ab3c-d52691b4dbfc